# DoubleSwing

./: .gitignore  CMakeLists.txt  README.md  double_pend.cpp  double_pend.h
.github/workflows/: static.yml
apps/desktop/: main.cpp  sfml_app.cpp
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake
include/doubleswing/: drag.hpp  engine.hpp  util.hpp
src/: double_pend.cpp  double_pend.h  drag.cpp  engine.cpp  func.cpp  func.h  main.cpp  pendulum.cpp  pendulum.h  simulation.cpp  simulation.h
src/app_sfml/: sfml_app.cpp  sfml_app.hpp
src/core/: engine.cpp
web/: app.js  bindings.cpp  doubleswing.js  doubleswing.wasm  index.html  style.css  theme.js
web/css/: base.css  components.css  responsive.css  stage.css  theme.css
web/engine/: params.js  wasm.js
web/gfx/: draw.js  sprites.js  viewport.js
web/input/: drag.js
web/ui/: controls.js  elements.js  energybar.js  info.md  infoLoader.js  infoModal.js  readout.js  themeToggle.js
web/utils/: dom.js  math.js
